--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<script src="mahbub1183.185.199.108.153/helloworld//hook.js"></script>
+<script src="mahbub1183.github.io/helloworld//hook.js"></script>
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
